Progress on multiple drag and drop

--- a/zoia_lib/UI/resources/dark.css
+++ b/zoia_lib/UI/resources/dark.css
@@ -36,6 +36,7 @@ QPushButton:hover {
 }
 
 QPushButton:disabled {
+    border: 0.5px solid dimgray;
     background-color: #41454c;
     color: #787878;
 }
@@ -176,4 +177,3 @@ QTabWidget::pane {
 QTabWidget {
     background-color: #31363b;
 }
-
