--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -238,7 +238,11 @@
                             <string>This button will refresh the data in the PatchStorage patch table with the latest patches on PatchStorage should the list ever become out of sync.</string>
                            </property>
                            <property name="styleSheet">
-                            <string notr="true"/>
+                            <string notr="true">QPushButton{
+border-top-right-radius: 10px 5px;
+padding: 2px 5px 2px 5px;
+border: 1px solid black;
+}</string>
                            </property>
                            <property name="text">
                             <string>Refresh patches</string>
@@ -300,11 +304,11 @@
                          <attribute name="horizontalHeaderCascadingSectionResizes">
                           <bool>true</bool>
                          </attribute>
-                         <attribute name="horizontalHeaderMinimumSectionSize">
-                          <number>0</number>
-                         </attribute>
                          <attribute name="horizontalHeaderDefaultSectionSize">
                           <number>100</number>
+                         </attribute>
+                         <attribute name="horizontalHeaderMinimumSectionSize">
+                          <number>0</number>
                          </attribute>
                          <attribute name="horizontalHeaderStretchLastSection">
                           <bool>true</bool>
@@ -464,7 +468,11 @@
                       <string>When clicked, exits out of the Version History for a patch and returns to the full list of patches currently stored in the ZOIA Librarian</string>
                      </property>
                      <property name="styleSheet">
-                      <string notr="true"/>
+                      <string notr="true">QPushButton{
+border-top-left-radius: 10px 5px;
+padding: 2px 25px 2px 25px;
+border: 1px solid black;
+}</string>
                      </property>
                      <property name="text">
                       <string>Back</string>
@@ -523,7 +531,11 @@
                       <string>Automatically checks for updates to any patches listed in the Local Storage View table when clicked. Should any be found, a popup will let you know how many patches were updated.</string>
                      </property>
                      <property name="styleSheet">
-                      <string notr="true"/>
+                      <string notr="true">QPushButton{
+border-top-right-radius: 10px 5px;
+padding: 2px 5px 2px 5px;
+border: 1px solid black;
+}</string>
                      </property>
                      <property name="text">
                       <string>Check for updates</string>
@@ -567,11 +579,11 @@
                    <attribute name="horizontalHeaderCascadingSectionResizes">
                     <bool>true</bool>
                    </attribute>
-                   <attribute name="horizontalHeaderMinimumSectionSize">
-                    <number>10</number>
-                   </attribute>
                    <attribute name="horizontalHeaderDefaultSectionSize">
                     <number>100</number>
+                   </attribute>
+                   <attribute name="horizontalHeaderMinimumSectionSize">
+                    <number>10</number>
                    </attribute>
                    <attribute name="horizontalHeaderStretchLastSection">
                     <bool>true</bool>
@@ -579,10 +591,10 @@
                    <attribute name="verticalHeaderVisible">
                     <bool>false</bool>
                    </attribute>
-                   <attribute name="verticalHeaderMinimumSectionSize">
+                   <attribute name="verticalHeaderDefaultSectionSize">
                     <number>0</number>
                    </attribute>
-                   <attribute name="verticalHeaderDefaultSectionSize">
+                   <attribute name="verticalHeaderMinimumSectionSize">
                     <number>0</number>
                    </attribute>
                    <row/>
@@ -643,7 +655,12 @@
                     <string>When clicked, updates the patch notes for the currently selected patch. Patch notes can be add directly below in the Additional Patch Notes Display. </string>
                    </property>
                    <property name="styleSheet">
-                    <string notr="true"/>
+                    <string notr="true">QPushButton{
+border-top-right-radius: 10px 5px;
+border-top-left-radius: 10px 5px;
+padding: 2px 2px 2px 2px;
+border: 1px solid black;
+}</string>
                    </property>
                    <property name="text">
                     <string>Update Patch Notes</string>
@@ -785,7 +802,11 @@
                  <string>Will attempt to delete the currently selected item in the SD tree view above from your SD card. Will create a popup if the currently selected item is a folder, at which point a warning will indicate that deletion will delete everything contained within. The options are yes to continue with the deletion and no to abort. </string>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true"/>
+                 <string notr="true">QPushButton{
+border-radius: 5px;
+padding: 2px 2px 2px 2px;
+border: 1px solid black;
+}</string>
                 </property>
                 <property name="text">
                  <string>Delete Selected Item Above</string>
@@ -813,7 +834,11 @@
                  <string>Attempts to import all of the patches listed in the tables below (SD card table left and SD card table right) into the ZOIA Librarian. This requires that a folder is selected from the SD Card Viewer above that contains patches.</string>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true"/>
+                 <string notr="true">QPushButton{
+border-radius: 5px;
+padding: 2px 2px 2px 2px;
+border: 1px solid black;
+}</string>
                 </property>
                 <property name="text">
                  <string>Import All Listed Patches Below</string>
@@ -826,7 +851,11 @@
                  <cursorShape>PointingHandCursor</cursorShape>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true"/>
+                 <string notr="true">QPushButton{
+border-radius: 5px;
+padding: 2px 2px 2px 2px;
+border: 1px solid black;
+}</string>
                 </property>
                 <property name="text">
                  <string>Import All Listed Patches Below As A Version History</string>
@@ -1349,7 +1378,11 @@
                    <string>When clicked, will open a popup asking for a Bank name, which will then be saved such that it can be loaded at a later time.</string>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true"/>
+                   <string notr="true">QPushButton{
+border-top-left-radius: 10px 5px;
+padding: 2px 25px 2px 25px;
+border: 1px solid gray;
+}</string>
                   </property>
                   <property name="text">
                    <string>Save Bank</string>
@@ -1377,7 +1410,10 @@
                    <string>When clicked, you will be prompted to select a Bank to load that has been created in a previous session using the ZOIA Librarian.</string>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true"/>
+                   <string notr="true">QPushButton{
+padding: 2px 25px 2px 25px;
+border: 1px solid gray;
+}</string>
                   </property>
                   <property name="text">
                    <string>Load Bank</string>
@@ -1405,7 +1441,11 @@
                    <string>When clicked, will open a popup asking for a Bank name, which will then be saved such that it can be exported to an SD card, should it have been specified previously.</string>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true"/>
+                   <string notr="true">QPushButton{
+border-top-right-radius: 10px 5px;
+padding: 2px 5px 2px 5px;
+border: 1px solid gray;
+}</string>
                   </property>
                   <property name="text">
                    <string>Export Bank</string>
@@ -1909,7 +1949,11 @@
                    <string>When clicked, exits out of the Version History for a patch and returns to the full list of patches currently stored in the ZOIA Librarian</string>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true"/>
+                   <string notr="true">QPushButton{
+border-top-left-radius: 10px 5px;
+padding: 2px 25px 2px 25px;
+border: 1px solid gray;
+}</string>
                   </property>
                   <property name="text">
                    <string>Back</string>
