--- a/zoia_lib/UI/resources/dark.css
+++ b/zoia_lib/UI/resources/dark.css
@@ -1,167 +1,99 @@
 QTabBar::tab:selected {
     background-color: #444851;
+    border-bottom: 0;
     border-top-left-radius: 10px 5px;
     border-top-right-radius: 10px 5px;
-    border-bottom: 0px;
-    padding: 5px, 5px, 5px, 5px;
-    width: 200%;
+    color: #FFF;
     font: bold;
-    color: white;
+    padding: 5px;
+    width: 200%;
 }
 
 QTabWidget::pane {
-    background-color: #545963;
+    background-color: #31363b;
+    position: absolute;
 }
 
 QPushButton {
-    border: 0.5px solid dimgray;
     background-color: #5e616e;
-    color: white;
-}
-
-QHeaderView {
-    background-color: #31363b;
-
+    border: 1px solid #696969;
+    color: #FFF;
 }
 
 QPushButton:hover {
-    border: 0.5px solid dimgray;
     background-color: qlineargradient(x1:0.5,
-    y1: 0.5
+    y1: 0.5,
     x2: 0.5,
     y2: 1,
     stop: 0 #454a4f,
     stop: 0.5 #3b4045);
-    color: white;
+    border: 1px solid #696969;
+    color: #FFF;
 }
 
 QPushButton:disabled {
-    border: 0.5px solid dimgray;
     background-color: #41454c;
+    border: 1px solid #696969;
     color: #787878;
 }
 
-
 QLineEdit {
-    border: 0.5px solid dimgray;
-    padding: -2px, 0px, 0px, 0px;
     background-color: #5e616e;
-    color: white;
-}
-
-QMainWindow {
-    background-color: #31363b;
-}
-
-QMenuBar::item:hover {
-    background-color: #444851;
-}
-
-
-QMenuBar::item:selected {
-    background-color: #444851;
-}
-
-QWidget#widget_9,
-QWidget#tab_ps,
-QWidget#tab_sd,
-QWidget#tab_bank{
-    background-color: #444851;
+    border: 1px solid #696969;
+    color: #FFF;
+    padding: -2px 0 0;
 }
 
 QMenuBar::item:pressed {
     background-color: #444851;
-    color: white;
-}
-
-QSplitter {
-    background-color: #444851;
+    color: #FFF;
 }
 
 QSplitter::handle {
     background-color: #444851;
-    border: 0.1ex dashed #76797c;
-}
-
-QTreeView {
-    color: white;
-    background-color: #31363b;
-}
-
-QStatusBar {
-    color:white;
-}
-
-QTextBrowser {
-    color: white;
-    background-color: #31363b;
+    border: .1ex dashed #76797c;
 }
 
 QMenuBar {
     background-color: #31363b;
-    color: white;
-}
-
-QTableView {
-    color: white;
-    background-color: #31363b;
+    color: #FFF;
 }
 
 QTableView::item:selected {
     background-color: #3b4045;
-    color: white;
-}
-
-QScrollBar:vertical {
-    background-color: #2A2929;
-}
-
-QScrollBar:horizontal {
-    background-color: #2A2929;
+    color: #FFF;
 }
 
 QToolTip {
-    border: 0.1ex solid #eff0f1;
-    background-color: #31363b;
     alternate-background-color: #3b4045;
+    background-color: #31363b;
+    border: .1ex solid #eff0f1;
     color: #eff0f1;
-    padding: 0.5ex;
-}
-
-QTableCornerButton::section {
-    background-color: #444851;
+    padding: .5ex;
 }
 
 QHeaderView::section {
     background-color: #444851;
-    color: #ffffff;
+    color: #fff;
 }
 
 QHeaderView::section:selected {
     background-color: #3b4045;
-    color: #ffffff;
-}
-
-QRadioButton {
-    color: white;
+    color: #fff;
 }
 
 QTabBar::tab:!selected {
     background-color: #191a20;
-    border-bottom: 0px;
+    border-bottom: 0;
     border-top-left-radius: 10px 5px;
     border-top-right-radius: 10px 5px;
-    padding: 5px, 5px, 5px, 5px;
+    color: #FFF;
+    padding: 5px;
     width: 200%;
-    color: white;
 }
 
 QTabBar::tab:!selected:hover {
     background-color: #727888;
-}
-
-QTabBar {
-    background-color: #31363b;
 }
 
 QTabWidget::tab-bar {
@@ -169,11 +101,25 @@ QTabWidget::tab-bar {
     border-bottom: 1px solid #31363b;
 }
 
-QTabWidget::pane {
-    position: absolute;
+QHeaderView, QMainWindow, QTabBar, QTabWidget {
     background-color: #31363b;
 }
 
-QTabWidget {
+QMenuBar::item:hover, QMenuBar::item:selected, QWidget#widget_9,
+QWidget#tab_ps, QWidget#tab_sd, QWidget#tab_bank,
+QSplitter, QTableCornerButton::section {
+    background-color: #444851;
+}
+
+QTreeView, QTextBrowser, QTableView {
     background-color: #31363b;
+    color: #FFF;
+}
+
+QStatusBar, QRadioButton {
+    color: #FFF;
+}
+
+QScrollBar:vertical, QScrollBar:horizontal {
+    background-color: #2A2929;
 }
