--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -308,7 +308,7 @@ border: 1px solid black;
                           <number>0</number>
                          </attribute>
                          <attribute name="horizontalHeaderDefaultSectionSize">
-                          <number>100</number>
+                          <number>0</number>
                          </attribute>
                          <attribute name="horizontalHeaderStretchLastSection">
                           <bool>true</bool>
@@ -468,7 +468,11 @@ border: 1px solid black;
                       <string>When clicked, exits out of the Version History for a patch and returns to the full list of patches currently stored in the ZOIA Librarian</string>
                      </property>
                      <property name="styleSheet">
-                      <string notr="true"/>
+                      <string notr="true">QPushButton{
+border-top-left-radius: 10px 5px;
+padding: 2px 25px 2px 25px;
+border: 1px solid black;
+}</string>
                      </property>
                      <property name="text">
                       <string>Back</string>
@@ -527,7 +531,11 @@ border: 1px solid black;
                       <string>Automatically checks for updates to any patches listed in the Local Storage View table when clicked. Should any be found, a popup will let you know how many patches were updated.</string>
                      </property>
                      <property name="styleSheet">
-                      <string notr="true"/>
+                      <string notr="true">QPushButton{
+border-top-right-radius: 10px 5px;
+padding: 2px 5px 2px 5px;
+border: 1px solid black;
+}</string>
                      </property>
                      <property name="text">
                       <string>Check for updates</string>
@@ -572,10 +580,10 @@ border: 1px solid black;
                     <bool>true</bool>
                    </attribute>
                    <attribute name="horizontalHeaderMinimumSectionSize">
-                    <number>10</number>
+                    <number>0</number>
                    </attribute>
                    <attribute name="horizontalHeaderDefaultSectionSize">
-                    <number>100</number>
+                    <number>0</number>
                    </attribute>
                    <attribute name="horizontalHeaderStretchLastSection">
                     <bool>true</bool>
@@ -647,7 +655,12 @@ border: 1px solid black;
                     <string>When clicked, updates the patch notes for the currently selected patch. Patch notes can be add directly below in the Additional Patch Notes Display. </string>
                    </property>
                    <property name="styleSheet">
-                    <string notr="true"/>
+                    <string notr="true">QPushButton{
+border-top-right-radius: 10px 5px;
+border-top-left-radius: 10px 5px;
+padding: 2px 2px 2px 2px;
+border: 1px solid black;
+}</string>
                    </property>
                    <property name="text">
                     <string>Update Patch Notes</string>
@@ -2025,6 +2038,9 @@ border: 1px solid gray;
                  <bool>true</bool>
                 </attribute>
                 <attribute name="horizontalHeaderMinimumSectionSize">
+                 <number>0</number>
+                </attribute>
+                <attribute name="horizontalHeaderDefaultSectionSize">
                  <number>0</number>
                 </attribute>
                 <attribute name="horizontalHeaderStretchLastSection">
